[feature] 로그인페이지 디자인, 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     /* typescript 모듈 찾기 지정 */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
 
     /* Bundler mode */
