--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-intersection-observer": "^9.10.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
